--- a/dev/styleDev.scss
+++ b/dev/styleDev.scss
@@ -1,12 +1,9 @@
 /*Main Stylesheet*/
 
-/*SCSS declarations*/
 /***********************************/
-/*main web page color*/ 
 $primaryColor: orangered;
 /*vertical space taken by floating header*/
 $headerSpace: 14em;
-/*declaration for a solid black border and removes margins*/
 @mixin blackBorder {
     border-style: solid;
     border-color: black;
@@ -15,42 +12,37 @@ $headerSpace: 14em;
 }
 /***********************************/
 
-/*global styling*/
+/*global*/
 /***********************************/
-/*fit html to whole page*/
 html {
     min-height: 100%;
 }
-/*remove body margin*/
 body {
     margin: 0;
 }
-/*removing the blue highlighting from hyperlinks*/
+/*remove blue highlighting from hyperlinks*/
 a {
     color: inherit;
     text-decoration: none;
+}
+/*primary div between header and footer*/
+#mainView {
+    display: block;
 }
 /***********************************/
 
 /*floating header*/
 /***********************************/
-/*the containing header element*/
 header {
-    /*position header at top of page and fix it*/
     position: fixed;
     top:0;
     left:0;
-    /*background color*/
     background-color: $primaryColor;
     /*fixed height so exact top margin can be used by element below*/
     height: $headerSpace;
-    /*fit full page width*/
     width: 100%;
-    /*solid black border*/
     @include blackBorder();
-    /*center heading in header*/
     text-align: center;
-    /*font styling of main title in header*/
     h1 {
         font-size: 4.2em;
         padding-top: 0.2em;
@@ -59,41 +51,33 @@ header {
         display: inline-block;
     }
 }
-/*dropdown menu class*/
+/*dropdown menu*/
 .dropdown {
-    /*position the dropdown menu in the top left corner of the header*/
     position: absolute;
     left: 0;
-    /*fit div size to content*/
     display: inline-block;
-    /*set height*/
     height: 3.8em;
 }
-/*class for content within dropdown menu*/
+/*content within dropdown menu*/
 .dropdownContent {
     /*hidden while mouse is not hovering over element*/
     display: none;
-    /*fit width to width of dropdown menu*/
     width: 100%;
-    /*align text items to the left*/
     text-align: left;
-    /*background color*/
     background-color: $primaryColor;
     @include blackBorder();
     margin-top: 6em;
-    /*dropdown content text styling*/
     h2 {
         font-size: 4em;
         margin: 0 0 1em 0;
         width: 100%;
         /*em used for horizontal spacing in special case where the width required is greater than it's parent (>%100)*/
         padding-right: 5em;
-        /*solid black border*/
         @include blackBorder();
     }
     z-index: 1;
 }
-/*dropdown menu icon styling*/
+/*dropdown menu icon*/
 #menuIcon {
     height: 6.5em;
     /*parent is div fit to width, % cannot be used for horizontal spacing here*/
@@ -102,6 +86,7 @@ header {
     left: 0;
     top: 0;
 }
+/*cart icon*/
 #cartIcon {
     position: absolute;
     right: 0;
@@ -110,13 +95,12 @@ header {
     height: 6em;
     margin: 0.1em 0.9% 0 0;
 }
-/*on mouse hover the dropdown content class will display underneath the dropdown menu class*/
+/*hovering over dropdown will display dropdown content*/
 .dropdown:hover .dropdownContent {
     display: block;
 }
-/*search bar in header*/
+/*search bar*/
 #searchBar {
-    /*position in bottom right and leave space on the left for dropdown menu*/
     font-size: 3em;
     position: absolute;
     height: 1.8em;
@@ -127,32 +111,27 @@ header {
     z-index: -1;
     touch-action: none;
 }
+#headSpace {
+    height: $headerSpace;
+}
 /***********************************/
 
-/*web store styling*/
+/*product*/
 /***********************************/
-/*store containing div*/
-#productView {
-    margin-top: 1em;
-}
-/*wrapper div for store items*/
+/*root div for products*/
 .products {
     display: block;
 }
-/*individual store item class*/
+/*individual product*/
 .product {
-    /*set the store item divs to the width of their content*/
     display: inline-block;
-    /*solid black border*/
     @include blackBorder();
     width: 100%;
     margin: 1em 2%;
-    /*font styling of titles of store items*/
     h2 {
         font-size: 3.6em;
         margin: 1em 0;
     }
-    /*price and description styling*/
     p {
         margin: 0 0 4em 0;
         font-size: 2em;
@@ -160,18 +139,22 @@ header {
     label {
         font-size: 3em;
     }
-    /*store item quantity selector*/
     input {
         font-size: 3em;
         width: 15%;
         text-align: center;
         touch-action: none;
     }
-    /*store item add to cart button*/
     button {
         background-color: $primaryColor;
         font-size: 3em;
         text-align: center;
+    }
+    img {
+        height: 42em;
+        width: 39%;
+        display: inline;
+        margin: 0.25em 0.6% 0 0.6%;
     }
 }
 .addCart {
@@ -186,14 +169,6 @@ header {
 .cartQuantity {
     width: 12%;
 }
-/*store item images*/
-.productImage {
-    /*sets size of image*/
-    height: 42em;
-    width: 39%;
-    display: inline;
-    margin: 0.25em 0.6% 0 0.6%;
-}
 .productText {
     display: inline-block;
     vertical-align: top;
@@ -204,22 +179,16 @@ header {
 }
 /***********************************/
 
-/*non-floating/absolute footer*/
+/*footer*/
 /***********************************/
 footer {
-    /*align text in center*/
     text-align: center;
-    /*position at bottom of page*/
     bottom: 0;
     left: 0;
-    /*fit full page width*/
     width: 100%;
     padding-bottom: 0.8em;
-    /*background color*/
     background-color: $primaryColor;
-    /*solid black border*/
     @include blackBorder();
-    /*footer paragraph styling*/
     p {
         margin: 0;
         font-size: 2.3em;
@@ -227,10 +196,8 @@ footer {
 }
 /***********************************/
 
-#headSpace {
-    height: $headerSpace;
-}
-
+/*cart*/
+/***********************************/
 #cartHead {
     @include blackBorder();
     text-align: center;
@@ -247,3 +214,4 @@ footer {
         width: 80%;
     }
 }
+/***********************************/
